--- a/backend/src/main/resources/css/finish.css
+++ b/backend/src/main/resources/css/finish.css
@@ -1,6 +1,6 @@
 .content{
-    border: 2px solid rosybrown;
-    border-radius: 5px;
+    border: 5px solid rosybrown;
+    border-radius: 30px;
     margin: 0 auto;
     margin-top: 80px;
     padding: 20px;
@@ -10,8 +10,9 @@
 
 .text{
     text-align: center;
-    font-size: 40px;
+    font-size: 60px;
     font-weight: 900;
+    line-height: 120px;
 }
 .progress{
     text-align: center;
@@ -19,8 +20,8 @@
 
 .box{
     margin: 0 auto;
-    margin-top: 100px;
-    width: 600px;
+    margin-top: 500px;
+    width: 700px;
     height: 30px;
     overflow: hidden;
     cursor: pointer;
@@ -30,7 +31,7 @@
 }
 .bar{
     width:100%;
-    height: 4px;
+    height: 10px;
     background: rosybrown;
     margin-top:12px ;
 }
@@ -41,12 +42,12 @@
     position: relative;
 }
 .dot{
-    width:10px;
-    height:10px;
+    width:25px;
+    height:25px;
     border-radius:50%;
     background: rgb(128, 59, 50);
     position: absolute;
     right: -4px;
-    top:-3px;
+    top:-6px;
 }
 
