--- a/backend/src/main/resources/css/input.css
+++ b/backend/src/main/resources/css/input.css
@@ -1,7 +1,7 @@
 .input-a{
-    width: 90%;
-    margin: 60px auto;
-    height: 500px;
+    width: 70%;
+    margin: 60px 10px;
+    height: 50px;
     font-size: 18px;
     border: 1px solid #000;
     border-radius: 8px;
@@ -18,7 +18,7 @@
     outline: none;
     background: #fff;
     border: 0;
-    margin-left: 25%;
+    margin-left: 15%;
 }
 .plane{
     display: flex;
@@ -47,4 +47,30 @@
     width: 100%;
     height: 84px;
     z-index:1;
+}
+
+.type{
+    margin: 50px 20px;
+    text-align: center;
+    display: flex;
+}
+
+.text-input{
+    padding-top: 20px;
+    font-size: 34px;
+    padding-inline-start: 50px;
+}
+
+.label-type{
+    font-size: 30px;
+}
+
+.confirm{
+    width: 150px;
+    height: 80px;
+    font-size: 30px;
+    background: #FFA500;
+    border-radius: 4px;
+    margin: 20px;
+    color: #fff;
 }
