--- a/backend/src/main/resources/css/finish.css
+++ b/backend/src/main/resources/css/finish.css
@@ -1,4 +1,4 @@
-.content{
+.finish_content{
     border: 5px solid rosybrown;
     border-radius: 30px;
     margin: 0 auto;
@@ -8,7 +8,7 @@
     width: 70%
 }
 
-.text{
+.finish_text{
     text-align: center;
     font-size: 60px;
     font-weight: 900;
