--- a/backend/src/main/resources/css/start_3_styles.css
+++ b/backend/src/main/resources/css/start_3_styles.css
@@ -3,6 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
+  width:375px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -14,32 +15,64 @@
 #base {
   position:absolute;
   z-index:0;
+  margin-left: 100px;
+  margin-top: 100px;
+  margin-right: 100px;
+  width:100%;
+  height:100%;
+  display: flex;
+  /*-webkit-align-content: center;*/
+  flex-wrap: wrap;
+  flex-direction:column;
 }
+#time {
+  position:relative;
+  left:0px;
+  top:160px;
+  width:100%;
+  height:250px;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-align-content: center;
+  align-items : center;
+  justify-content : center;
+}
+#duringtime {
+  position:relative;
+  width:33%;
+  height:300px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction:column;
+}
+
 #u0_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:130px;
-  height:50px;
+  width:100%;
+  height:100%;
   background:inherit;
   background-color:rgba(255, 195, 64, 1);
   border:none;
-  border-radius:5px;
+  border-radius:10px;
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-size:18px;
+  font-size:55px;
 }
 #u0 {
   border-width:0px;
   position:absolute;
-  left:42px;
-  top:554px;
-  width:130px;
-  height:50px;
+  left:0px;
+  top:76%;
+  width:41%;
+  height:150px;
   display:flex;
-  font-size:18px;
+  font-size:55px;
 }
 #u0 .text {
   position:absolute;
@@ -58,26 +91,26 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:130px;
-  height:50px;
+  width:100%;
+  height:100%;
   background:inherit;
   background-color:rgba(255, 64, 75, 1);
   border:none;
-  border-radius:5px;
+  border-radius:10px;
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-size:18px;
+  font-size:60px;
 }
 #u1 {
   border-width:0px;
   position:absolute;
-  left:202px;
-  top:554px;
-  width:130px;
-  height:50px;
+  left:49%;
+  top:76%;
+  width:41%;
+  height:160px;
   display:flex;
-  font-size:18px;
+  font-size:60px;
 }
 #u1 .text {
   position:absolute;
@@ -96,29 +129,29 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:290px;
-  height:60px;
+  width:100%;
+  height:100%;
   background:inherit;
   background-color:rgba(22, 213, 133, 1);
   border:none;
-  border-radius:5px;
+  border-radius:10px;
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-size:24px;
+  font-size:65px;
 }
 #u2 {
   border-width:0px;
-  position:absolute;
-  left:42px;
-  top:466px;
-  width:290px;
-  height:60px;
+  position:relative;
+  left:0px;
+  top:63%;
+  width:90%;
+  height:170px;
   display:flex;
-  font-size:24px;
+  font-size:65px;
 }
 #u2 .text {
-  position:absolute;
+  position:relative;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
@@ -129,36 +162,29 @@
   word-wrap:break-word;
   text-transform:none;
 }
-#u3_div {
+
+#u3 {
   border-width:0px;
+  /*position:relative;*/
   position:absolute;
   left:0px;
   top:0px;
-  /*width:618px;*/
-  /*height:780px;*/
   width:100%;
   height:100%;
+  display:flex;
+  position:absolute;
+  left:0px;
+  top:20px;
+  width:90%;
+  height:56%;
   background:inherit;
   background-color:rgba(242, 242, 242, 0);
   box-sizing:border-box;
-  border-width:1px;
+  border-width:5px;
   border-style:solid;
   border-color:rgba(121, 121, 121, 1);
   border-radius:10px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-}
-#u3 {
-  border-width:0px;
-  position:absolute;
-  left:33px;
-  top:44px;
-  /*width:309px;*/
-  /*height:389px;*/
-  width:80%;
-  height:40%;
-  display:flex;
+  flex-direction:column;
 }
 #u3 .text {
   position:absolute;
@@ -178,8 +204,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:290px;
-  height:45px;
+  width:100%;
+  height:100px;
   background:inherit;
   background-color:rgba(22, 155, 213, 0);
   border:none;
@@ -190,21 +216,21 @@
   font-family:'Comic Sans MS Negreta', 'Comic Sans MS Normal', 'Comic Sans MS', sans-serif;
   font-weight:700;
   font-style:normal;
-  font-size:24px;
+  font-size:60px;
   text-align:center;
 }
 #u4 {
   border-width:0px;
-  position:absolute;
-  left:40px;
-  top:126px;
-  width:290px;
-  height:45px;
+  position:relative;
+  left:0px;
+  top:100px;
+  width:100%;
+  height:100px;
   display:flex;
   font-family:'Comic Sans MS Negreta', 'Comic Sans MS Normal', 'Comic Sans MS', sans-serif;
   font-weight:700;
   font-style:normal;
-  font-size:24px;
+  font-size:60px;
   text-align:center;
 }
 #u4 .text {
@@ -224,8 +250,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:290px;
-  height:45px;
+  width:100%;
+  height:100px;
   background:inherit;
   background-color:rgba(22, 155, 213, 0);
   border:none;
@@ -236,21 +262,21 @@
   font-family:'Comic Sans MS Negreta', 'Comic Sans MS Normal', 'Comic Sans MS', sans-serif;
   font-weight:700;
   font-style:normal;
-  font-size:24px;
+  font-size:60px;
   text-align:center;
 }
 #u5 {
   border-width:0px;
-  position:absolute;
-  left:40px;
-  top:290px;
-  width:290px;
-  height:45px;
+  position:relative;
+  left:0px;
+  top:100px;
+  width:100%;
+  height:100px;
   display:flex;
   font-family:'Comic Sans MS Negreta', 'Comic Sans MS Normal', 'Comic Sans MS', sans-serif;
   font-weight:700;
   font-style:normal;
-  font-size:24px;
+  font-size:60px;
   text-align:center;
 }
 #u5 .text {
@@ -270,8 +296,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:290px;
-  height:45px;
+  width:100%;
+  height:100px;
   background:inherit;
   background-color:rgba(22, 155, 213, 0);
   border:none;
@@ -279,25 +305,29 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Hobo Std Medium', 'Hobo Std', sans-serif;
+  /*font-family:'Hobo Std Medium', 'Hobo Std', sans-serif;*/
+  font-family:'STXinwei';
   font-weight:500;
   font-style:normal;
-  font-size:24px;
+  font-size:65px;
   text-align:center;
+  -webkit-align-content: center;
 }
 #u6 {
   border-width:0px;
-  position:absolute;
-  left:42px;
-  top:63px;
-  width:290px;
-  height:45px;
+  position:relative;
+  left:0px;
+  top:60px;
+  width:100%;
+  height:100px;
   display:flex;
-  font-family:'Hobo Std Medium', 'Hobo Std', sans-serif;
+  /*font-family:'Hobo Std Medium', 'Hobo Std', sans-serif;*/
+  font-family:'STXinwei';
   font-weight:500;
   font-style:normal;
-  font-size:24px;
+  font-size:65px;
   text-align:center;
+  -webkit-align-content: center;
 }
 #u6 .text {
   position:absolute;
@@ -316,8 +346,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:272px;
-  height:99px;
+  width:100%;
+  height:300px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -325,18 +355,19 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-size:24px;
+  font-size:50px;
   text-align:center;
 }
 #u7 {
   border-width:0px;
-  position:absolute;
-  left:49px;
-  top:184px;
-  width:272px;
-  height:99px;
+  position:relative;
+  left:0px;
+  top:80px;
+  width:100%;
+  height:300px;
   display:flex;
-  font-size:24px;
+  font-family:'KaiTi', sans-serif;
+  font-size:50px;
   text-align:center;
 }
 #u7 .text {
@@ -351,13 +382,14 @@
   word-wrap:break-word;
   text-transform:none;
 }
+
 #u8_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:70px;
-  height:30px;
+  width:33%;
+  height:150px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -365,18 +397,18 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-size:24px;
-  text-align:center;
+  font-size:55px;
+  justify-content:center;
 }
 #u8 {
   border-width:0px;
-  position:absolute;
-  left:72px;
-  top:379px;
-  width:70px;
-  height:30px;
+  position:relative;
+  left:0;
+  /*top:150px;*/
+  width:33%;
+  height:200px;
   display:flex;
-  font-size:24px;
+  font-size:55px;
   text-align:center;
 }
 #u8 .text {
@@ -396,8 +428,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:70px;
-  height:30px;
+  width:33%;
+  height:200px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -405,18 +437,18 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-size:24px;
+  font-size:55px;
   text-align:center;
 }
 #u9 {
   border-width:0px;
-  position:absolute;
-  left:232px;
-  top:379px;
-  width:70px;
-  height:30px;
+  position:relative;
+  /*left:66%;*/
+  top:0px;
+  width:33%;
+  height:200px;
   display:flex;
-  font-size:24px;
+  font-size:55px;
   text-align:center;
 }
 #u9 .text {
@@ -431,26 +463,26 @@
   word-wrap:break-word;
   text-transform:none;
 }
-#u10_img {
-  border-width:0px;
+#u10_div {
   position:absolute;
-  left:-1px;
-  top:-1px;
-  width:55px;
-  height:5px;
+  left:25%;
+  top:0px;
+  width:50%;
+  height:0px;
+  background:inherit;
+  background-color:rgba(242, 242, 242, 0);
+  box-sizing:border-box;
+  border-width:3px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:10px;
+  flex-direction:column;
 }
 #u10 {
   border-width:0px;
-  position:absolute;
-  left:159px;
-  top:396px;
-  width:52px;
-  height:2px;
-  display:flex;
-  -webkit-transform:rotate(0.128390054544016deg);
-  -moz-transform:rotate(0.128390054544016deg);
-  -ms-transform:rotate(0.128390054544016deg);
-  transform:rotate(0.128390054544016deg);
+  position:relative;
+  width:100%;
+  height:0px;
 }
 #u10 .text {
   position:absolute;
@@ -470,8 +502,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:54px;
-  height:26px;
+  width:100%;
+  height:100%;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -484,14 +516,16 @@
 }
 #u11 {
   border-width:0px;
-  position:absolute;
-  left:157px;
-  top:363px;
-  width:54px;
-  height:26px;
+  position:relative;
+  left:5%;
+  width:90%;
+  height:120px;
   display:flex;
-  font-size:24px;
+  font-family:'KaiTi', sans-serif;
+  font-size:50px;
   text-align:center;
+  line-height: 120px;
+  vertical-align: middle;
 }
 #u11 .text {
   position:absolute;
