--- a/backend/src/main/resources/css/start_3_styles.css
+++ b/backend/src/main/resources/css/start_3_styles.css
@@ -1,13 +1,13 @@
-﻿body {
-  margin:0px;
-  background-image:none;
-  position:static;
-  left:auto;
-  width:375px;
-  margin-left:0;
-  margin-right:0;
-  text-align:left;
-}
+﻿/*body {*/
+  /*margin:0px;*/
+  /*background-image:none;*/
+  /*position:static;*/
+  /*left:auto;*/
+  /*width:375px;*/
+  /*margin-left:0;*/
+  /*margin-right:0;*/
+  /*text-align:left;*/
+/*}*/
 .form_sketch {
   border-color:transparent;
   background-color:transparent;
