--- a/backend/src/main/resources/css/finish.css
+++ b/backend/src/main/resources/css/finish.css
@@ -1,11 +1,16 @@
 .finish_content{
-    border: 5px solid rosybrown;
+    border: 5px solid #797979;
     border-radius: 30px;
     margin: 0 auto;
     margin-top: 80px;
     padding: 20px;
     text-align: center;
-    width: 70%
+    width: 70%;
+    font-family: 'Comic Sans MS Negreta', 'Comic Sans MS Normal', 'Comic Sans MS', sans-serif;
+    font-weight:700;
+    font-style:normal;
+    font-size:60px;
+    text-align:center;
 }
 
 .finish_text{
@@ -13,6 +18,7 @@
     font-size: 60px;
     font-weight: 900;
     line-height: 120px;
+    margin-top: 10px
 }
 .progress{
     text-align: center;
@@ -20,9 +26,9 @@
 
 .box{
     margin: 0 auto;
-    margin-top: 500px;
-    width: 700px;
-    height: 30px;
+    margin-top: 20px;
+    width: 800px;
+    height: 40px;
     overflow: hidden;
     cursor: pointer;
     background-color: #f0f0f3;
@@ -31,23 +37,31 @@
 }
 .bar{
     width:100%;
-    height: 10px;
-    background: rosybrown;
+    height: 15px;
+    background: #169BD5;
     margin-top:12px ;
 }
 .line{
     width:100px;
     height:100%;
-    background: rgb(119, 64, 49);
+    background: #0a74d5;
     position: relative;
 }
 .dot{
-    width:25px;
-    height:25px;
+    width:30px;
+    height:30px;
     border-radius:50%;
-    background: rgb(128, 59, 50);
+    background: rgb(20, 77, 128);
     position: absolute;
     right: -4px;
-    top:-6px;
+    top:-8px;
+}
+.finish_confirm{
+    height: 150px;
+    width: 700px;
+    border-radius: 20px;
+    background-color: #FFC340;
+    margin-left: 150px;
+    margin-top: 100px;
 }
 
