--- a/backend/src/main/resources/css/input.css
+++ b/backend/src/main/resources/css/input.css
@@ -1,8 +1,8 @@
 .input-a{
     width: 70%;
-    margin: 60px 10px;
-    height: 50px;
-    font-size: 18px;
+    margin: 60px 20px;
+    height: 80px;
+    font-size: 38px;
     border: 1px solid #000;
     border-radius: 8px;
 }
@@ -22,15 +22,16 @@
 }
 .plane{
     display: flex;
-    margin-left: 30%;
+    margin-left: 25%;
+    margin-top: 10%;
 }
 .plane-time{
-    font-size: 34px;
+    font-size: 40px;
 
 }
 
 .plane-todo{
-    font-size: 34px;
+    font-size: 40px;
     margin-left: 10%;
 }
 
@@ -50,27 +51,33 @@
 }
 
 .type{
-    margin: 50px 20px;
+    margin: 50px 40px;
     text-align: center;
     display: flex;
 }
 
 .text-input{
     padding-top: 20px;
-    font-size: 34px;
+    font-size: 50px;
     padding-inline-start: 50px;
+    font-family: 'Comic Sans MS Negreta', 'Comic Sans MS Normal', 'Comic Sans MS', sans-serif;
+    font-style: normal;
 }
 
 .label-type{
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .confirm{
-    width: 150px;
-    height: 80px;
     font-size: 30px;
-    background: #FFA500;
-    border-radius: 4px;
-    margin: 20px;
+    background: #FFC340;
+    border-radius: 10px;
+    margin: 40px;
     color: #fff;
+    border: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    width: 41%;
+    height: 150px;
 }
