--- a/backend/src/main/resources/css/rank.css
+++ b/backend/src/main/resources/css/rank.css
@@ -33,6 +33,7 @@
     margin-left: 4%;
     font-family: 'Comic Sans MS Negreta', 'Comic Sans MS Normal', 'Comic Sans MS', sans-serif;
     margin-bottom: 5%;
+    margin-top: 3%;
 }
 
 .ge-li{
