--- a/backend/src/main/resources/css/timeLine.css
+++ b/backend/src/main/resources/css/timeLine.css
@@ -1,11 +1,9 @@
-.tlpp-wrapper{
-    display: flex;
-    flex-flow: column wrap;
+.tlp-wrapper{
     margin: 0 auto;
 }
 
-.tlpp-wrapper::after{
-    z-index: 1;
+.tlp-wrapper::after{
+    z-index: -1;
     content: "";
     position: absolute;
     top: 0;
@@ -16,58 +14,64 @@
 
 .tlp-item{
     position: relative;
+    margin-top: 100px;
+}
+
+.tlp-item:nth-child(even){
+    margin-left: 552px;
 }
 
 .tlp-detail{
-    width: 200px;
-    position: absolute;
-    top: 260px;
-    left: 87px;
+    width: 500px;
+    max-height: 500px;
+    overflow: scroll;
+    position: fixed;
+    top: 650px;
+    left: 218px;
     z-index: 1;
     background: #fff;
-    padding: 15px;
-    border: 1px solid rgba(191, 191, 191, 0.4);
-    box-shadow: 0px 1px 22px 4px rgba(0, 0, 0, 0.07);
+    padding: 40px;
+    box-shadow: 0 3px 55px 10px rgba(0, 0, 0, 0.07);
 }
 
 .tlp-detail img{
     width: 100%;
-    height: 100px;
+    height: 250px;
 }
 
 .tlp-detail-p{
     width: 100%;
     word-break: break-word;
-    font-size: 14px;
-    line-height: 18px;
-    margin-bottom: 10px;
+    font-size: 40px;
+    line-height: 45px;
+    margin-bottom: 25px;
 }
 
 .tlp-simple{
-    width: 130px;
-    height: 85px;
-    padding: 15px;
-    border: 1px solid rgba(191, 191, 191, 0.4);
-    box-shadow: 0px 1px 22px 4px rgba(0, 0, 0, 0.07);
+    width: 325px;
+    padding: 40px;
+    border: 3px solid rgba(191, 191, 191, 0.4);
+    box-shadow: 0px 3px 55px 10px rgba(0, 0, 0, 0.07);
     position: relative;
 }
 
 .tlp-simple::before{
     position: absolute;
     content: "";
-    width: 9px;
-    height: 9px;
+    width: 25px;
+    height: 25px;
     background-color: #bdbdbd;
-    border-radius: 9px;
-    box-shadow: 0px 0px 2px 8px #f7f7f7;
+    border-radius: 25px;
+    box-shadow: 0px 0px 5px 20px #f7f7f7;
+    top:85px;
 }
 
-.tlp-simple::before .tlp-item:nth-child(odd){
-    left: calc(100% + 20px);
+.tlp-item:nth-child(odd)>.tlp-simple::before {
+    left: calc(100% + 60px);
 }
 
-.tlp-simple::before .tlp-item:nth-child(even){
-    right: calc(100% + 20px);
+.tlp-item:nth-child(even)>.tlp-simple::before {
+    right: calc(100% + 60px);
 }
 
 .tlp-simple::after{
@@ -75,18 +79,19 @@
     content: "";
     width: 0;
     height: 0;
-    border-top: 15px solid transparent;
-    border-bottom: 15px solid transparent;
+    border-top: 40px solid transparent;
+    border-bottom: 40px solid transparent;
+    top:55px;
 }
 
-.tlp-simple::after .tlp-item:nth-child(odd){
-    border-left-width: 15px;
+.tlp-item:nth-child(odd)>.tlp-simple::after {
+    border-left-width: 40px;
     border-left-style: solid;
     left: 100%;
 }
 
-.tlp-simple::after .tlp-item:nth-child(even){
-    border-right-width: 15px;
+.tlp-item:nth-child(even)>.tlp-simple::after {
+    border-right-width: 40px;
     border-right-style: solid;
     right: 100%;
 }
@@ -94,8 +99,9 @@
 .tlp-simple-p{
     width: 100%;
     color: white;
-    font-size: 20px;
-    line-height: 24px;
+    font-size: 45px;
+    line-height: 50px;
+    overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
@@ -103,7 +109,34 @@
 .tlp-simple-time{
     width: 100%;
     color: white;
-    font-size: 20px;
-    line-height: 24px;
+    font-size: 50px;
+    line-height: 60px;
+}
+
+.tlp-color0{
+    background-color: #ffc340;
+}
+
+.tlp-color0::after{
+    border-left-color: #ffc340;
+    border-right-color: #ffc340;
+}
+
+.tlp-color1{
+    background-color: #ff404b;
+}
+
+.tlp-color1::after{
+    border-left-color: #ff404b;
+    border-right-color: #ff404b;
+}
+
+.tlp-color2{
+    background-color: #16d585;
+}
+
+.tlp-color2::after{
+    border-left-color: #16d585;
+    border-right-color: #16d585;
 }
 
